# verovio

./: .gitignore  CMakeLists.txt
cmake/: CMakeLists.txt
src/: vrv.cpp
testqt/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  qttest.cpp
testqt/include/vrv/: qtpainterdevicecontext.h
testqt/src/: qtpainterdevicecontext.cpp
tools/: c_wrapper.cpp  c_wrapper.h
